--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is  the initial backend codebase for this Web platform, including complete API structure, authentication, and data models using Node.js, Express, and MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
