add the registerController to register new user

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "type": "module",
   "name": "altavision-backend",
   "version": "1.0.0",
-  "description": "This is  the initial backend codebase for this Web platform, including complete API structure, authentication, and data models using Node.js, Express, and MongoDB.",
+  "description": "This is the initial backend codebase for this Web platform, including complete API structure, authentication, and data models using Node.js, Express, and MongoDB.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,14 +12,6 @@
     "type": "git",
     "url": "git+https://github.com/rimpuhwe/AltaVision-Backend.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/rimpuhwe/AltaVision-Backend/issues"
-  },
-  "homepage": "https://github.com/rimpuhwe/AltaVision-Backend#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
